--- a/src/components/homepage/carousel.css
+++ b/src/components/homepage/carousel.css
@@ -43,7 +43,7 @@
       .carousel .control-prev.control-arrow:before {
         border-right: 8px solid #fff; }
     .carousel .control-next.control-arrow {
-      right: 0; }
+      left: 95%; }
       .carousel .control-next.control-arrow:before {
         border-left: 8px solid #fff; }
   
